--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pixels - PrebuiltUI</title>
     <link rel="stylesheet" href="./output.css">
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="fixed top-0 z-50 flex items-center justify-between w-full py-4 px-6 md:px-16 lg:px-24 xl:px-32 backdrop-blur">
         <a href="https://prebuiltui.com?utm_source=pixels">
-            <img class="h-8.5 w-auto" src="/assets/logo.svg" alt="logo" />
+            <img class="h-8.5 w-auto" src="./assets/logo.svg" alt="logo" />
         </a>
 
         <div class="hidden md:flex items-center gap-8 transition duration-500">
-            <a href="/" class="hover:text-pink-500 transition">
+            <a href="#!" class="hover:text-pink-500 transition">
                 Home
             </a>
             <a href="#features" class="hover:text-pink-500 transition">
@@ -39,7 +39,7 @@
         </button>
     </nav>
     <div id="mobile-navlinks" class="fixed inset-0 z-100 bg-black/40 backdrop-blur flex flex-col items-center justify-center text-lg gap-8 md:hidden transition-transform duration-400 -translate-x-full">
-        <a href="/">
+        <a href="#!">
             Home
         </a>
         <a href="#features">
@@ -97,7 +97,7 @@
                 <span class="text-slate-400">Setup in 10 minutes</span>
             </p>
         </div>
-        <img src="/assets/hero-section-showcase.png"
+        <img src="./assets/hero-section-showcase.png"
             class="w-full rounded-[15px] max-w-4xl mt-16"
             alt="hero section showcase"
         />
@@ -117,20 +117,20 @@
 
         <div class="flex flex-wrap items-center justify-center gap-6 md:gap-4 mt-16 px-6">
             <div class="p-6 rounded-xl space-y-4 border border-slate-800 bg-slate-950 max-w-80 w-full">
-                <img alt="Lightning-fast setup" src="/assets/zap-icon.svg">
+                <img alt="Lightning-fast setup" src="./assets/zap-icon.svg">
                 <h3 class="text-base font-medium text-white">Lightning-fast setup</h3>
                 <p class="text-slate-400 line-clamp-2 pb-4">Launch production-ready pages in minutes with prebuilt
                     components.</p>
             </div>
             <div class="p-px rounded-[13px] bg-gradient-to-br from-pink-600 to-slate-800">
                 <div class="p-6 rounded-xl space-y-4 border border-slate-800 bg-slate-950 max-w-80 w-full">
-                    <img alt="Pixel perfect" src="/assets/thumb-icon.svg">
+                    <img alt="Pixel perfect" src="./assets/thumb-icon.svg">
                     <h3 class="text-base font-medium text-white">Pixel perfect</h3>
                     <p class="text-slate-400 line-clamp-2 pb-4">Modern Figma-driven UI that translates to exact code.</p>
                 </div>
             </div>
             <div class="p-6 rounded-xl space-y-4 border border-slate-800 bg-slate-950 max-w-80 w-full">
-                <img alt="Highly customizable" src="/assets/shape-icon.svg">
+                <img alt="Highly customizable" src="./assets/shape-icon.svg">
                 <h3 class="text-base font-medium text-white">Highly customizable</h3>
                 <p class="text-slate-400 line-clamp-2 pb-4">Tailwind utility-first classes make customization trivial.
                 </p>
@@ -142,9 +142,9 @@
             <p class="text-slate-300 text-lg text-left max-w-3xl">PrebuiltUI helps you build faster by transforming your design vision into fully functional, production-ready UI components.</p>
             <div class="grid grid-cols-1 md:grid-cols-3 mt-8 gap-10">
                 <div class="md:col-span-2">
-                    <img alt="features showcase" src="/assets/features-showcase-1.png"></div>
+                    <img alt="features showcase" src="./assets/features-showcase-1.png"></div>
                 <div class="md:col-span-1">
-                    <img alt="features showcase" class="hover:-translate-y-0.5 transition duration-300" src="/assets/features-showcase-2.png">
+                    <img alt="features showcase" class="hover:-translate-y-0.5 transition duration-300" src="./assets/features-showcase-2.png">
                     <h3 class="text-[24px]/7.5 text-slate-300 font-medium mt-6">Better design with highest revenue and profits </h3>
                     <p class="text-slate-300 mt-2">PrebuiltUI empowers you to build beautifully and scale effortlessly.</p>
                     <a href="https://prebuiltui.com" class="group flex items-center gap-2 mt-4 text-pink-600 hover:text-pink-700 transition">
@@ -370,32 +370,32 @@
     <footer class="flex flex-wrap justify-center md:justify-between overflow-hidden gap-10 md:gap-20 mt-40 py-6 px-6 md:px-16 lg:px-24 xl:px-32 text-[13px] text-gray-500">
         <div class="flex flex-wrap items-start gap-10 md:gap-35">
             <a href="https://prebuiltui.com?utm_source=pixels">
-                <img class="size-8 aspect-square" alt="footer logo" src="/assets/footer-logo.svg">
+                <img class="size-8 aspect-square" alt="footer logo" src="./assets/footer-logo.svg">
             </a>
             <div>
                 <p class="text-slate-100 font-semibold">Product</p>
                 <ul class="mt-2 space-y-2">
-                    <li><a href="/" class="hover:text-pink-600 transition">Home</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Support</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Pricing</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Affiliate</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Home</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Support</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Pricing</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Affiliate</a></li>
                 </ul>
             </div>
             <div>
                 <p class="text-slate-100 font-semibold">Resources</p>
                 <ul class="mt-2 space-y-2">
-                    <li><a href="/" class="hover:text-pink-600 transition">Company</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Blogs</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Community</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Careers</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">About</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Company</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Blogs</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Community</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Careers</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">About</a></li>
                 </ul>
             </div>
             <div>
                 <p class="text-slate-100 font-semibold">Legal</p>
                 <ul class="mt-2 space-y-2">
-                    <li><a href="/" class="hover:text-pink-600 transition">Privacy</a></li>
-                    <li><a href="/" class="hover:text-pink-600 transition">Terms</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Privacy</a></li>
+                    <li><a href="#!" class="hover:text-pink-600 transition">Terms</a></li>
                 </ul>
             </div>
         </div>
