--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pixels - PrebuiltUI</title>
     <link rel="stylesheet" href="./output.css">
-    <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -402,7 +402,7 @@
         <div class="flex flex-col max-md:items-center max-md:text-center gap-2 items-end">
             <p class="max-w-60">Making every customer feel valued—no matter the size of your audience.</p>
             <div class="flex items-center gap-4 mt-3">
-                <a href="https://dribbble.com/prebuiltui" target="_blank" rel="noreferrer">
+                <a href="#!" target="_blank" rel="noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-dribbble size-5 hover:text-pink-500" aria-hidden="true">
                         <circle cx="12" cy="12" r="10"></circle>
                         <path d="M19.13 5.09C15.22 9.14 10 10.44 2.25 10.94"></path>
@@ -410,21 +410,21 @@
                         <path d="M8.56 2.75c4.37 6 6 9.42 8 17.72"></path>
                     </svg>
                 </a>
-                <a href="https://www.linkedin.com/company/prebuiltui" target="_blank" rel="noreferrer">
+                <a href="#!" target="_blank" rel="noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-linkedin size-5 hover:text-pink-500" aria-hidden="true">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                         <rect width="4" height="12" x="2" y="9"></rect>
                         <circle cx="4" cy="4" r="2"></circle>
                     </svg>
                 </a>
-                <a href="https://x.com/prebuiltui" target="_blank" rel="noreferrer">
+                <a href="#!" target="_blank" rel="noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-twitter size-5 hover:text-pink-500" aria-hidden="true">
                         <path
                             d="M22 4s-.7 2.1-2 3.4c1.6 10-9.4 17.3-18 11.6 2.2.1 4.4-.6 6-2C3 15.5.5 9.6 3 5c2.2 2.6 5.6 4.1 9 4-.9-4.2 4-6.6 7-3.8 1.1 0 3-1.2 3-1.2z">
                         </path>
                     </svg>
                 </a>
-                <a href="https://www.youtube.com/@prebuiltui" target="_blank" rel="noreferrer">
+                <a href="#!" target="_blank" rel="noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-youtube size-6 hover:text-pink-500" aria-hidden="true">
                         <path d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17">
                         </path>
@@ -436,7 +436,7 @@
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
